syntax="proto2";
package protobuf;

message Parser_manhua_page {

    required uint64 Id = 1;
    required string Category = 2;
    required string Site = 3;
    required string Url = 4;
}