syntax="proto3";
package protobuf;

message Saver_manhua_chapter {

    uint64 Id = 1;
    string Site = 2;
    int32  Number = 3;
    string Chapter = 4;
    string Title = 5;
    string Url = 6;
    int64 FinishedTime = 7;
    bool Available = 8;
    int64 UpdateTime = 9;
}