syntax="proto2";
package task;

message Saver_manhua_image {

    required uint64  Id = 1;
    required string Site = 2;
    required int32  Number = 3;
    required string Chapter = 4;
    required string Sequence = 5;
    required string Url = 6;
    required string Uuid = 7;
}