syntax="proto2";
package task;

import "vendor/github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

message Saver_manhua_site {

    required uint64 Id = 1;
    required string Site = 2;
    required string Name = 3;
    required string Url = 4;
    required int32    Number = 5;
    required string Categories = 6;
    required string Face = 7;
    optional google.protobuf.Timestamp UpdateTime = 8;
    optional google.protobuf.Timestamp CheckTime = 9;
}